# cmake-learn

./: CMakeLists.txt  README.md  cmakeconfig.h.in  main.cpp
cmake/: FindLIBXML2.cmake
doc/: release_note.txt
mod1/: CMakeLists.txt  mod1.cpp  mod1.h  mod1_func.cpp  mod1_func.h
mod1/mod2/: CMakeLists.txt  mod2.cpp  mod2.h
